--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
         <div class="text-container">
           <p>"Meet Chirantan Sayan, a dynamic individual passionate about Computer Science.
             With a blend of creativity and dedication, I excel in Machine learning and WEBD.
-            Through various Projects, I continually strives for excellence, leaving a lasting impact in Society."</p>
+            Through various Projects, I continually strive for excellence, leaving a lasting impact in Society."</p>
         </div>
       </div>
     </div>
