--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
       </div>
       <div id="socials-container">
         <img src="./assets/linkedin.png" alt="linkedin profile" class="icon"
-          onclick="location.href='https://linkedin.com/'">
+          onclick="location.href='https://www.linkedin.com/me?trk=p_mwlite_profile_self-secondary_nav'">
         <img src="./assets/github.png" alt="github page" class="icon" onclick="location.href='https://github.com/chirantansayan'">
       </div>
     </div>
