--- a/index.html
+++ b/index.html
@@ -197,7 +197,7 @@
         </div>
         <div class="contact-info-container">
           <img src="./assets/linkedin.png" alt="LinkedIn icon" class="icon contact-icon" />
-          <p><a href="https://www.linkedin.com">LinkedIn</a></p>
+          <p><a href="https://www.linkedin.com/me?trk=p_mwlite_profile_self-secondary_nav">LinkedIn</a></p>
         </div>
       </div>
     </section>
